[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-viz"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A modern Python visualization library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[project.urls]
"Homepage" = "https://github.com/example/lumina-viz"
"Bug Tracker" = "https://github.com/example/lumina-viz/issues"
